--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -28,12 +28,12 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <FrameLayout
-            android:id="@+id/appDrawerLayout"
+            android:id="@+id/homeScreenLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <GridView
-                android:id="@+id/appDrawerGrid"
+                android:id="@+id/homeScreenGrid"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:numColumns="4"
