--- a/app/src/main/res/layout/app_drawer.xml
+++ b/app/src/main/res/layout/app_drawer.xml
@@ -22,6 +22,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/appSearchBar"
+                style="@style/AppSearch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Search apps"
