--- a/app/src/main/res/layout/item_widget.xml
+++ b/app/src/main/res/layout/item_widget.xml
@@ -6,12 +6,8 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/appLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -21,19 +17,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:layout_marginStart="9dp"
+            android:scaleType="centerCrop"
             app:srcCompat="@android:drawable/sym_def_app_icon" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:outlineProvider="none"
             android:shadowColor="#FFFFFF"
             android:shadowDx="1"
             android:shadowDy="1"
             android:shadowRadius="10"
-            android:text="App"
+            android:text="Widget"
             android:textColor="#000000" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
