Add expanding and minimising

--- a/app/src/main/res/layout/study_mode.xml
+++ b/app/src/main/res/layout/study_mode.xml
@@ -40,6 +40,7 @@
             android:id="@+id/allowedApps"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
             android:background="#FFFFFF">
 
         </androidx.gridlayout.widget.GridLayout>
