--- a/app/src/main/res/layout/study_mode_screen.xml
+++ b/app/src/main/res/layout/study_mode_screen.xml
@@ -28,6 +28,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            android:layout_marginTop="35dp"
             android:orientation="horizontal">
 
             <TextView
@@ -39,6 +40,14 @@
                 android:textAlignment="viewStart"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/editTextTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="time" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/minutesInputLayout"
@@ -91,6 +100,17 @@
                 android:layout_height="92dp"
                 android:layout_weight="1">
 
+                <TextView
+                    android:id="@+id/infoText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="Drop emergency apps here to pin. Pinned apps will still be usable when Study Mode is enabled."
+                    android:textAlignment="center"
+                    android:textSize="20dp" />
             </com.example.echolauncher.DropTarget>
 
             <com.example.echolauncher.DropTarget
@@ -98,7 +118,16 @@
                 android:layout_width="81dp"
                 android:layout_height="81dp"
                 android:layout_weight="0.25"
-                android:background="#FFFFFF"></com.example.echolauncher.DropTarget>
+                android:background="#FFFFFF">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="43dp"
+                    android:layout_height="49dp"
+                    app:layout_column="0"
+                    app:layout_row="0"
+                    app:srcCompat="@drawable/cross" />
+            </com.example.echolauncher.DropTarget>
 
         </LinearLayout>
 
