--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/masterConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -37,10 +38,10 @@
                 android:layout_height="match_parent" />
 
             <!--            <androidx.fragment.app.FragmentContainerView-->
-<!--                android:id="@+id/homeScreenFragment"-->
-<!--                android:name="com.example.echolauncher.HomeScreen"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent" />-->
+            <!--                android:id="@+id/homeScreenFragment"-->
+            <!--                android:name="com.example.echolauncher.HomeScreen"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent" />-->
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/homeScreenFragment"
