--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -26,16 +27,19 @@
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="10"
-        android:text="Widget"
+        android:text="Item"
         android:textColor="#000000"
-        app:layout_constraintTop_toBottomOf="@+id/appIcon"
-        tools:layout_editor_absoluteX="184dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appIcon" />
 
     <TextView
         android:id="@+id/leftText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Left Text"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/appIcon"
         app:layout_constraintStart_toStartOf="@+id/appIcon"
         app:layout_constraintTop_toTopOf="@+id/appIcon" />
@@ -46,6 +50,7 @@
         android:layout_height="wrap_content"
         android:text="Right Text"
         android:textAlignment="textEnd"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/appIcon"
         app:layout_constraintEnd_toEndOf="@+id/appIcon"
         app:layout_constraintTop_toTopOf="@+id/appIcon" />
@@ -55,6 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Up Text"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/appIcon"
         app:layout_constraintStart_toStartOf="@+id/appIcon"
         app:layout_constraintTop_toTopOf="@+id/appIcon" />
@@ -64,6 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Down Text"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/appIcon"
         app:layout_constraintEnd_toEndOf="@+id/appIcon"
         app:layout_constraintStart_toStartOf="@+id/appIcon" />
