--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Layout for the main activity of the app -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,17 +8,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <View
-        android:id="@+id/overlay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+    <!-- The main scroll view, this is used to store the home screen pages, the
+    app drawer and the widget drawer -->
     <ScrollView
-        android:id="@+id/masterScrollView"
+        android:id="@+id/mainScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
@@ -31,31 +25,27 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- Widget drawer fragment -->
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/widgetDrawerFragment"
                 android:name="com.example.echolauncher.WidgetDrawer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <!--            <androidx.fragment.app.FragmentContainerView-->
-            <!--                android:id="@+id/homeScreenFragment"-->
-            <!--                android:name="com.example.echolauncher.HomeScreen"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="match_parent" />-->
-
+            <!-- Home screen fragment -->
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/homeScreenFragment"
                 android:name="com.example.echolauncher.HomeScreen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <!-- App drawer fragment -->
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/appDrawerFragment"
                 android:name="com.example.echolauncher.AppDrawer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:layout="@layout/app_drawer" />
-
         </LinearLayout>
     </ScrollView>
 
