Change font to kumbh sans

--- a/app/src/main/res/layout/app_drawer.xml
+++ b/app/src/main/res/layout/app_drawer.xml
@@ -25,6 +25,7 @@
                 style="@style/AppSearch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/kumbhsans"
                 android:hint="Search apps"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
