--- a/app/src/main/res/layout/study_mode.xml
+++ b/app/src/main/res/layout/study_mode.xml
@@ -21,6 +21,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="270dp"
+            android:fontFamily="@font/kumbhsans"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:text="Study Mode Enabled"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
@@ -31,6 +34,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/kumbhsans"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
             android:text="0:00 remaining"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
