--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -21,6 +21,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/kumbhsans"
         android:gravity="center"
         android:outlineProvider="none"
         android:shadowColor="#FFFFFF"
@@ -38,6 +39,9 @@
         android:id="@+id/leftText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/kumbhsans"
+        android:paddingStart="20dp"
+        android:paddingEnd="0dp"
         android:text="Left Text"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/appIcon"
@@ -48,6 +52,9 @@
         android:id="@+id/rightText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/kumbhsans"
+        android:paddingStart="0dp"
+        android:paddingEnd="20dp"
         android:text="Right Text"
         android:textAlignment="textEnd"
         android:visibility="invisible"
@@ -59,6 +66,7 @@
         android:id="@+id/upText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/kumbhsans"
         android:text="Up Text"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/appIcon"
@@ -69,6 +77,7 @@
         android:id="@+id/downText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/kumbhsans"
         android:text="Down Text"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/appIcon"
