--- a/app/src/main/res/layout/home_screen_grid.xml
+++ b/app/src/main/res/layout/home_screen_grid.xml
@@ -13,7 +13,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/ic_delete" />
+        app:srcCompat="@drawable/cross" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/homeScreenGrid"
