--- a/app/src/main/res/layout/timetable_dialog.xml
+++ b/app/src/main/res/layout/timetable_dialog.xml
@@ -15,13 +15,13 @@
 
         <include
             android:id="@+id/eventList"
-            layout="@layout/event_list"
+            layout="@layout/timetable_list"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
 
         <include
             android:id="@+id/eventNew"
-            layout="@layout/event_new"
+            layout="@layout/timetable_new"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </ViewFlipper>
