Use custom AppDrawerGridView to allow the app drawer to occupy a suitable amount of space

--- a/app/src/main/res/layout/app_drawer.xml
+++ b/app/src/main/res/layout/app_drawer.xml
@@ -35,10 +35,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <GridView
+            <com.example.echolauncher.AppDrawerGridView
                 android:id="@+id/drawerGrid"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:numColumns="4"
                 android:verticalSpacing="20px" />
         </FrameLayout>
