--- a/app/src/main/res/layout/study_mode.xml
+++ b/app/src/main/res/layout/study_mode.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#717171"
-    tools:context=".HomeDestination">
+    tools:context=".home_screen.HomeDestination">
 
     <LinearLayout
         android:layout_width="match_parent"
